--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.5",
     "debug": "^2.6.9",
     "ejs": "^3.0.1",
+    "email-validator": "^2.0.4",
     "express": "^4.16.4",
     "express-session": "^1.17.0",
     "formidable": "^1.2.2",
